--- a/StudentUser/UserMainForm.resx
+++ b/StudentUser/UserMainForm.resx
@@ -117,4 +117,87 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="tuopan.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <metadata name="MinMenu.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>111, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="tuopan.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADalRAw25URsduWEcHblhHB25YRwduWEcHblhHB25YRwduW
+        EcHblhHB25YRwduWEcHblhHB25YRwduWEcHblhHB25YRwduWEcHblhHB25YRwduWEcHblhHB25YRwduW
+        EcHblhHB25YRwduVEbHalRAwAAAAAAAAAAAAAAAAAAAAANuVEbHblhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9qWEqEAAAAAAAAAAAAAAAAAAAAA25YRwduWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YRwQAAAAAAAAAAAAAAAAAAAADclRKR25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhBwAAAAAAAAAAAAAAAAAAAAAN+P
+        EBDblRHv25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/2pYR39qVEGDblhL/25YS/9qV
+        EGDblRHv25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/2pYR39+PEBAAAAAAAAAAAAAA
+        AAAAAAAAAAAAANqVEDDblRHv25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/clhBQ2pUQMNuW
+        Ev/blhL/348QENuVEoHblhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uVEe/alRAwAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANqVEGDblRHv25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YRvwAA
+        AADalhKh25YS/9uWEv/blRKB348QENqWEd/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blRHv2pUQMAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANqVEDDalhHf25YS/9uWEv/blhL/25YS/9uW
+        Ev/blxBAAAAAANuWEfHblhL/25YS/9uWEcEAAAAA2pUQYNuWEv/blhL/25YS/9uWEv/blhL/2pURz9+X
+        ECAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN+PEBDblhGv25YS/9uW
+        Ev/blhL/25YRvwAAAAAAAAAA2pUQMNuVEe/alRHP348QEAAAAAAAAAAA25UR4duWEv/blhL/25YS/9uW
+        Eo/fjxAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADclhBQ25UR79uWEv/blxBAAAAAAAAAAAAAAAAA2pUQMN+PEBAAAAAAAAAAAAAAAADblxBA25YS/9qW
+        Ed/blxBAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADfjxAQ3JYQUAAAAADalRAw3JUSkduWEcHalhHR25YRwduWEcHblRKB35cQIAAA
+        AADalRBg348QEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA25USgduWEv/blRHv25YRr9uXEn7blxJ+25YRv9uW
+        Ev/blhHx3JYQUAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANqWEqHblhL/2pUSn9+PEBAAAAAAAAAAAAAA
+        AAAAAAAA35cQINqVEc/blhL/25YQcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADclhBQ25YS/9qVEp8AAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANqWEdHblhL/35cQIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANqWEdHalhHfAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA35cQINuWEv/alhKhAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADflxAg25YS/9uW
+        EHAAAAAA3JYQUNyVEpHblhHB2pYR0dqWEdHblhHB3JUSkdyWEFAAAAAA25URsduWEfEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANuX
+        EEDblhL/25YRwduWEfHblhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEfHalhHR25YS/wAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA25YQcNuWEv/blhL/2pYR39uWEo/blhA+AAAAAAAAAAAAAAAAAAAAANuXEEDblhKP25UR79uW
+        Ev/blhL/2pUQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAADblhL/25YS/9qVEG4AAAAAAAAAAAAAAAAAAAAA3JYQUNqVEDAAAAAAAAAAAAAA
+        AADfjxAQ25cSftuWEv/blRHhAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAANuWEv/blhHBAAAAAAAAAADclhBQ2pYSoduWEfHblhL/25YS/9uV
+        EeHclRKR2pUQMAAAAAAAAAAA25YRwduWEv8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA25YS/9qWEdHalhKh25YR8duWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25UR4dyVEpHalhHR25YS/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANqVEGDblhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/3JYQUAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA25cQQNqWEqHblhHx25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25UR4dyV
+        EpHalRAwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAANuXEEDblhG/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/25YS/9uWEa/flxAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADflxAg2pUQbtqW
+        Ed/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/blhL/2pURz9yWEF7fjxAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAANqVEDDblhKP25UR79uWEv/blhL/25YS/9uWEv/blhL/25YS/9uWEv/blhL/25YS/9uW
+        Ev/alhHf25cSft+XECAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3JYQUNqVEp/blhL/25YS/9uWEv/blhL/25YS/9uV
+        Ee/alRKf2pUQMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAN+PEBDclhBe25YRv9uW
+        Ea/blBBOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///////////gAAAHwAAAA8AAAAPAAAAH4AJAB/AGQA/4BCAf/AwwP/4O
+        cH//n/n///gf///hj///x+f//8/z//+f+f//uBn//4AB//+H4f//P/z//zgc//8AAP//AAD/+AAAH/AA
+        AA/+AAB//4AD///wD////n////////////8=
+</value>
+  </data>
 </root>
